styles/style.css
body {
    background-color: #eceef1;
}
#top {
    height: 70px;
}
#top-text {
    float: left;
    width: 90%;
    font-size: 0.9em;
    line-height: 0.7;
    text-align: right;
}

#signin-btn {
    float: right;
    margin-top: 14px;
}

#signin-btn button {
    font-size: 1.5em;
    padding: 5px;
    border-radius: 3px;
    background-color: #0176c5;
    color: white;
}

header {
    position: relative;
    text-align: center;
    font-family: 'Lobster', cursive;
    line-height: .7;
}

h3 {
    display: inline;
}

h3 a {
    text-decoration: none;
    color: black;
}
form {
    margin: 0 auto;
    padding: 0;
    width: 450px;
    border: 1px solid black;
    background-color: white;
    margin-top: 20px;
}

form div {
    margin: 1em;
}

#form-title {
    text-align: center;
    line-height: 0.7;
}
#form-title p {
    line-height: 1;
}

#form-title a {
    text-decoration: none;
}

input {
    width: 100%;
    margin: 0 auto;
    font-size: 15px;
}

.form-label {
    margin-top: 30px;
    padding: 0;
    font-size: 1.1em;
}

.form-label p{
    font-size: 13px;
    margin-top: 0;
}

#form-disclaimer {
    font-style: italic;
    text-align: center;
}

#form-disclaimer a {
    text-decoration: none;
}

form button {
    background-color: #0176c5;
    color: white;
    padding-top: 8px;
    padding-bottom: 8px;
    width: 100%;
    margin: 0 auto;
    font-size: 14px;
}

#form-footer {
    background-color: #eceef1;
    margin: 0;
}

#form-footer p {
    margin: 0;
    padding: 15px;
    text-align: center;
    font-size: 13px;
}

#form-footer a {
    text-decoration: none;
}

footer {
    margin-top: 60px;
    margin-bottom: 0;
    text-align: center;
    /* padding-bottom: 0;  */
    line-height: 0.7;
}

footer a {
    text-decoration: none;
    color: black;
}

